Update for Spark 4 (#1)
* Use Kryo serializer again

* Propagate agnostic metadata for complex encoders

* Use ProductEncoder for structs and add tests

* Stop tracking .idea folder

* update gitignore

* default to scala 3