@@ -1,6 +1,6 @@
 inThisBuild(List(
-  scalaVersion := "2.12.20",
-  crossScalaVersions := Seq("2.12.20", "2.13.16", "3.3.6"),
+  scalaVersion := "3.3.6",
+  crossScalaVersions := Seq("2.13.16", "3.3.6"),
   organization := "io.github.pashashiz",
   homepage := Some(url("https://github.com/pashashiz")),
   licenses := List("Apache-2.0" -> url("http://www.apache.org/licenses/LICENSE-2.0")),
@@ -10,6 +10,8 @@ inThisBuild(List(
       name = "Pavlo Pohrebnyi",
       email = "pogrebnij@gmail.com",
       url = url("https://github.com/pashashiz"))),
+  javacOptions ++= Seq("--release", "17"),
+  scalacOptions ++= Seq("-release", "17"),
   sonatypeCredentialHost := "s01.oss.sonatype.org",
   sonatypeRepository := "https://s01.oss.sonatype.org/service/local"))
 
@@ -25,14 +27,36 @@ lazy val root = (project in file("."))
   .settings(
     name := "spark-encoders",
     libraryDependencies ++= Seq(
-      ("org.apache.spark" %% "spark-sql" % "3.5.5" % Provided).cross(CrossVersion.for3Use2_13),
+      ("org.apache.spark" %% "spark-sql" % "4.0.0" % Provided).cross(CrossVersion.for3Use2_13),
       "org.scalatest" %% "scalatest" % "3.2.19" % Test exclude (
         "org.scala-lang.modules",
         "scala-xml_3")),
-    libraryDependencies ++= (
+  libraryDependencies ++= (
       CrossVersion.partialVersion(scalaVersion.value) match {
         case Some((2, _)) => Seq("com.softwaremill.magnolia1_2" %% "magnolia" % "1.1.10")
         case _            => Seq.empty
       }),
-    Test / parallelExecution := false,
-    providedAsRunnable)
+  Test / parallelExecution := false,
+  Test / fork := true,
+  Test / javaOptions ++= Seq(
+    "-XX:+IgnoreUnrecognizedVMOptions",
+    "--add-modules=jdk.incubator.vector",
+    "--add-opens=java.base/java.lang=ALL-UNNAMED",
+    "--add-opens=java.base/java.lang.invoke=ALL-UNNAMED",
+    "--add-opens=java.base/java.lang.reflect=ALL-UNNAMED",
+    "--add-opens=java.base/java.io=ALL-UNNAMED",
+    "--add-opens=java.base/java.net=ALL-UNNAMED",
+    "--add-opens=java.base/java.nio=ALL-UNNAMED",
+    "--add-opens=java.base/java.time=ALL-UNNAMED",
+    "--add-opens=java.base/java.util=ALL-UNNAMED",
+    "--add-opens=java.base/java.util.concurrent=ALL-UNNAMED",
+    "--add-opens=java.base/java.util.concurrent.atomic=ALL-UNNAMED",
+    "--add-opens=java.base/jdk.internal.ref=ALL-UNNAMED",
+    "--add-opens=java.base/sun.nio.ch=ALL-UNNAMED",
+    "--add-opens=java.base/sun.nio.cs=ALL-UNNAMED",
+    "--add-opens=java.base/sun.security.action=ALL-UNNAMED",
+    "--add-opens=java.base/sun.util.calendar=ALL-UNNAMED",
+    "-Djdk.reflect.useDirectMethodHandle=false",
+    "-Dio.netty.tryReflectionSetAccessible=true"
+  ),
+  providedAsRunnable)
